test/test_suite/errors/top_level_decl_typo.c3
impor std::io; // #error: This is not a valid top level declaration. Did you perhaps want 'import'?

fn int main()
{
    io::printn("Hello world");
    return 0;
}

